<resources>
    <string name="app_name">YuBooks</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_continue">Sign in to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="continue_with_google">continue with google</string>
    <string name="dont_have_acct">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="example_email">example@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="hello">Hello</string>
    <string name="create_account">Create Account,</string>
    <string name="sign_up_start">Sign up to get Started!</string>
    <string name="an_arrow">An arrow</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="forget_password_hint_text">Please enter the email associated with your account</string>
    <string name="send">Send</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="phone">Phone Number</string>

    <string name="cart">Cart</string>
    <string name="books">Books</string>
    <string name="account">Account</string>
</resources>
